Redirect to /share after login, food on mobile bug fixes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -525,6 +525,8 @@ textarea {
 		display:block;
 	}
 	.food .btn {
+		float:none !important;
+		margin-left:0px !important;
 		width:100%;
 	}
 }
